# cpp-template-fun

./: CMakeLists.txt  Makefile  README.md
c1/: CMakeLists.txt  main.cc
c2/: CMakeLists.txt  c21.cc  c22.cc  main.cc  util.h
jenkins/: Jenkinsfile  jenkins-task.md  push.sh
